123/MyProject/src/objects/Attendance__c.object
<CustomObject>
    <fields>
        <fullName>Attendance2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendance2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Batch__c</fullName>
        <label>Batch</label>
        <picklist>
            <picklistValues>
                <fullName>Batch 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch 2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Student_ID__c</fullName>
        <label>Student ID</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Attendances</relationshipLabel>
        <relationshipName>Attendances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Attendance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>Attendance ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>